The backdrop in the VSE is broken. #58216

Closed
opened 2018-11-29 22:52:07 +01:00 by Alaska · 5 comments
Member

System Information:
CPU: Ryzen 5 2600
GPU: RX 570 4GB
OS: Windows 10 Home
Monitor resolution if it helps: 1440x900

Blender Version:
Broken: Blender 2.8 Beta 26d5a3625e

Short description of error:
The backdrop in the video sequence editor appears behind frame one and "squished".

Exact steps for others to reproduce the error:

  1. Open Blender and switch to the video sequencer editor (VSE).
  2. Add a video or image or set of images.
  3. Turn on the backdrop for the VSE and notice that the backdrop is not where it's supposed to be.
**System Information:** CPU: Ryzen 5 2600 GPU: RX 570 4GB OS: Windows 10 Home Monitor resolution if it helps: 1440x900 **Blender Version:** Broken: Blender 2.8 Beta 26d5a3625ed **Short description of error:** The backdrop in the video sequence editor appears behind frame one and "squished". **Exact steps for others to reproduce the error:** 1. Open Blender and switch to the video sequencer editor (VSE). 2. Add a video or image or set of images. 3. Turn on the backdrop for the VSE and notice that the backdrop is not where it's supposed to be.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Richard Antalik self-assigned this 2019-01-06 08:47:36 +01:00

This issue was referenced by 1b12c2d423

This issue was referenced by 1b12c2d423f3b7265455e42dc5f5c5e20c56624d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @brecht, @ChristopherAnderssarian

Added subscribers: @brecht, @ChristopherAnderssarian

This comment was removed by @ChristopherAnderssarian

*This comment was removed by @ChristopherAnderssarian*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58216
No description provided.