Fix T58216: backdrop drawing in sequencer broken.